; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/core/extr_dev_mcast.c_dev_mc_add.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/core/extr_dev_mcast.c_dev_mc_add.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.net_device = type { i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @dev_mc_add(%struct.net_device* %0, i8* %1, i32 %2, i32 %3) #0 {
  %5 = alloca %struct.net_device*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store %struct.net_device* %0, %struct.net_device** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %10 = load %struct.net_device*, %struct.net_device** %5, align 8
  %11 = call i32 @netif_addr_lock_bh(%struct.net_device* %10)
  %12 = load %struct.net_device*, %struct.net_device** %5, align 8
  %13 = getelementptr inbounds %struct.net_device, %struct.net_device* %12, i32 0, i32 1
  %14 = load %struct.net_device*, %struct.net_device** %5, align 8
  %15 = getelementptr inbounds %struct.net_device, %struct.net_device* %14, i32 0, i32 0
  %16 = load i8*, i8** %6, align 8
  %17 = load i32, i32* %7, align 4
  %18 = load i32, i32* %8, align 4
  %19 = call i32 @__dev_addr_add(i32* %13, i32* %15, i8* %16, i32 %17, i32 %18)
  store i32 %19, i32* %9, align 4
  %20 = load i32, i32* %9, align 4
  %21 = icmp ne i32 %20, 0
  br i1 %21, label %25, label %22

22:                                               ; preds = %4
  %23 = load %struct.net_device*, %struct.net_device** %5, align 8
  %24 = call i32 @__dev_set_rx_mode(%struct.net_device* %23)
  br label %25

25:                                               ; preds = %22, %4
  %26 = load %struct.net_device*, %struct.net_device** %5, align 8
  %27 = call i32 @netif_addr_unlock_bh(%struct.net_device* %26)
  %28 = load i32, i32* %9, align 4
  ret i32 %28
}

declare dso_local i32 @netif_addr_lock_bh(%struct.net_device*) #1

declare dso_local i32 @__dev_addr_add(i32*, i32*, i8*, i32, i32) #1

declare dso_local i32 @__dev_set_rx_mode(%struct.net_device*) #1

declare dso_local i32 @netif_addr_unlock_bh(%struct.net_device*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
